# CodeReviewBot

./: .gitignore  README.md  demo_all_use_cases.py
.crb/: rules.yaml
codereviewbot/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
codereviewbot/examples/workspace/: README.md  shared_rules.yaml.example  workspace.yaml.example
codereviewbot/specs/: README.md  code_review_pipeline.feature  skill_harvesting.feature
codereviewbot/src/: main.py
codereviewbot/src/agents/: __init__.py  business_rules_checker.py  impact_analyzer.py  orchestrator.py  profiler_agent.py  security_auditor.py  style_checker.py  summary_generator.py
codereviewbot/src/benchmark/: __init__.py  scorecard.py
codereviewbot/src/mcp_servers/: code_memory_mcp_server.py  filesystem_mcp_server.py  github_mcp_server.py
codereviewbot/src/memory/: code_chunker.py  index_audit.py  index_manifest.py  indexer.py  refresh.py  rule_approver.py  rule_harvester.py  style_profiler.py
codereviewbot/src/utils/: diff_resolver.py  package_validator.py  paths.py  rules_parser.py  static_analysis.py  token_budget.py
codereviewbot/tests/: test_benchmark_repos.py  test_benchmark_scorecard.py  test_business_rules_tool.py  test_cli.py  test_code_memory.py  test_diff_resolver.py  test_end_to_end.py  test_filesystem_mcp.py  test_github_mcp.py  test_incremental_index.py  test_index_audit.py  test_multi_repo_index.py  test_package_validator.py  test_platforms.py  test_rule_approver.py  test_rules_parser.py  test_style_profiler.py  test_token_budget_v2.py  test_workspace.py
(+65 files in other folders)
