[project]
name = "codereviewbot"
version = "0.1.0"
description = "Multi-agent automated PR review & security audit agent with code style memory"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-adk>=2.3.0",
    "mcp>=1.0.0",
    "chromadb>=0.4.0",
    "pyyaml>=6.0.0",
    "click>=8.0.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
codereviewbot = "src.main:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"
